# kflap

./: .clang-format  .gitignore  LICENSE  flake.nix  go.mod  go.sum  main.go  meson.build
examples/: DFA.jff  NDFA.jff
finiteautomaton/: finite_automaton.go  main.go
include/finite_automaton/: canvas.h  core.h  raylib.h  renderer.h  simulator.h
src/: main.cpp  meson.build
src/finite_automaton/: canvas.cpp  core.cpp  core_test.cpp  meson.build  raylib.cpp  renderer.cpp  simulator.cpp  simulator_test.cpp
